# nextodo

./: .gitignore  .npmrc  CLAUDE.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cli/: focusflow.ts  tsconfig.json
docs/: DND_HANDOFF.md
scripts/: generate_icon.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  watcher.rs
src/lib/components/: BadgesModal.svelte  CalendarView.svelte  CompletionSparkline.svelte  Confetti.svelte  ConfirmationModal.svelte  DropZone.svelte  FreshStart.svelte  HistoryModal.svelte  ImmersivePomodoro.svelte  InboxPanel.svelte  KanbanView.svelte  ListView.svelte  LowCompletionBanner.svelte  PomodoroTimer.svelte  QuickAddRow.svelte  QuotaMeter.svelte  ReviewPanel.svelte  ReviewWizard.svelte  SettingsModal.svelte  Sidebar.svelte  TagPicker.svelte  TaskCard.svelte  TaskEditModal.svelte  TaskForm.svelte  TaskInput.svelte  TodayView.svelte  TrashArchiveModal.svelte  UnitNav.svelte  WeekView.svelte  ZoneContainer.svelte  ZoneRail.svelte
src/lib/i18n/: en-US.ts  index.ts  store.svelte.ts  store.ts  zh-CN.ts
src/lib/stores/: gamification.svelte.ts  pomodoro.svelte.ts  reviews.svelte.ts  settings.svelte.ts  tasks.svelte.ts  ui.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: cycleEngine.ts  dnd.ts  motion.ts  parser.ts  quota.ts  quotaCore.ts  recurrence.ts  reminders.ts  storage.ts  unitCalc.ts
