[package]
name = "focusflow"
version = "2.0.0"
description = "FocusFlow - 专注力优先的任务管理器"
authors = ["FocusFlow Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-fs = "2.2"
tauri-plugin-notification = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
notify = "6.1"
tokio = { version = "1.0", features = ["full"] }
sys-locale = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
